-
Bug
-
Resolution: Fixed
-
Critical
-
Lustre 2.4.0
-
None
-
3
-
7560
Currently OSD code is very strict about op declaration matching actual number of operations and crashes if they don't match (e.g. LU-2991) which was pretty important early on to highlight such issues, but now that we transition to an actual release,we need to relax these checks.
Sure we still throw out a loud warning, but since the condition is normally not fatal (we way-overreserve transaction credits anyway) there is no point in crashing in this case on real customer systems.
It seems there is a compile-time switch OSD_TRACK_DECLARES, but I think it would be even better to make it into a proc variable, disabled by default, that we then can turn on at runtime during e.g. testing (to better highlight the issues), but actual customers don't get any crashes.
- is related to
-
LU-3449 Interop failure on many testsuites: error: set_param: track_declares_assert: Found no match
-
- Closed
-